added news methods on alfred controller
