# routes/api.php
@@ -26,7 +26,10 @@ Route::prefix('bridge')->group(function () {
 Route::prefix('alfred')->group(function () {
     Route::post('customers',                          [AlfredController::class, 'createCustomer']);
     Route::get('kyc-requirements',                    [AlfredController::class, 'kycRequirements']);
+    Route::put('kyc/update',                          [AlfredController::class, 'updateKycInfo']);
     Route::get('customers/kyc/{customerId}',          [AlfredController::class, 'getKYCSubmission']);
+    Route::get('/customers/kyc/info/{customerId}',          [AlfredController::class, 'getKYCInfo']);
+    Route::get('customers/{id}/kyc/{submissionId}/status',          [AlfredController::class, 'getKYCStatus']);
     Route::get('customers/kyc/verification/{id}',          [AlfredController::class, 'getKYCVerification']);
     Route::post('kyc/upload',                         [AlfredController::class, 'uploadKycFile']);
     Route::post('customers/{id}/kyc',                 [AlfredController::class, 'addKycInfo']);
